test_regress/t/t_force_input_assign_bad.out
%Error-ASSIGNIN: t/t_force_input_assign_bad.v:20:8: Assigning to input/const variable: 'i'
                                                  : ... note: In instance 't'
   20 |     s1.i = 2;
      |        ^
                 ... For error description see https://verilator.org/warn/ASSIGNIN?v=latest
%Error-ASSIGNIN: t/t_force_input_assign_bad.v:23:8: Assigning to input/const variable: 'i'
                                                  : ... note: In instance 't'
   23 |     s2.i = 2;
      |        ^
%Error-ASSIGNIN: t/t_force_input_assign_bad.v:27:15: Assigning to input/const variable: 'i'
                                                   : ... note: In instance 't'
   27 |     assign s3.i = 2;
      |               ^
%Error: Exiting due to
